Removed embedded maven